# dbt_snowflake

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  Makefile  README.md  dbt_project.yml  profiles.yml  pyproject.toml
.github/workflows/: dbt-ci.yml
analyses/: explore.sql
macros/: multiply.sql  tag.sql  trimmer.sql
models/bronze/: bronze_bookings.sql  bronze_hosts.sql  bronze_listings.sql  properties.yml
models/gold/: fact.sql  obt.sql
models/gold/ephemeral/: bookings.sql  hosts.sql  listings.sql
models/silver/: silver_bookings.sql  silver_hosts.sql  silver_listings.sql
scripts/: sqlfluff-fix.sh  sqlfluff-lint.sh
snapshots/: dim_bookings.yml  dim_hosts.yml  dim_listings.yml
